--- a/package.json
+++ b/package.json
@@ -10,13 +10,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "framer-motion": "^11.18.2",
+    "leaflet": "^1.9.4",
+    "lucide-react": "^0.363.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-router-dom": "^6.22.3",
-    "lucide-react": "^0.363.0",
-    "leaflet": "^1.9.4",
     "react-leaflet": "^4.2.1",
-    "framer-motion": "^11.0.24"
+    "react-router-dom": "^6.22.3"
   },
   "devDependencies": {
     "@types/react": "^18.3.5",
