--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-leaflet": "^4.2.1",
+    "react-paystack": "^6.0.0",
     "react-router-dom": "^6.22.3"
   },
   "devDependencies": {
